--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,32 @@
-# Backend
-backend/target/
-backend/.idea/
-backend/*.iml
-backend/.settings/
-backend/.project
-backend/.classpath
-backend/.factorypath
-backend/logs/
-backend/*.log
+# Dependencies
+node_modules/
+**/node_modules/
+**/package-lock.json
 
-# Frontend
-frontend/node_modules/
-frontend/build/
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
-frontend/.pnp
-frontend/.pnp.js
-frontend/coverage/
+# Build files
+**/build/
+**/dist/
 
-# IDE
+# IDE files
 .idea/
-*.iml
 .vscode/
-*.swp
-*.swo
 
-# OS
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Database files
+*.mv.db
+*.trace.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System Files
 .DS_Store
 Thumbs.db 
