--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:file:./data/middleware
+spring.datasource.url=jdbc:h2:file:./data/middleware;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -28,7 +28,10 @@ spring.servlet.multipart.max-request-size=10MB
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.xml.processor=DEBUG
-logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.com.xml.processor.config.CsrfTokenLoggingFilter=TRACE
+logging.level.org.springframework.security.web.csrf=TRACE
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # CORS Configuration
