--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -48,4 +48,7 @@ application.security.jwt.refresh-token.expiration=604800000
 # Security Configuration
 spring.security.filter.order=10
 spring.security.user.name=${ADMIN_USERNAME:admin}
-spring.security.user.password=${ADMIN_PASSWORD:admin} 
+spring.security.user.password=${ADMIN_PASSWORD:admin}
+
+# Token Blacklist Configuration
+app.security.token-blacklist=in-memory 
