--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "date-fns": "^2.29.3",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -53,7 +54,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.11",
