--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-# Server Configuration
-server.port=8080
-
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:file:./data/middleware;AUTO_SERVER=TRUE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# H2 Console Configuration
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
+
+# Datasource Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Server Configuration
+server.port=8080
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
